# VoxGL

./: .gitignore  .gitmodules  CMakeLists.txt  VoxGL.sln
VoxGL/: Block.cpp  Block.hpp  BlockFaceMesh.cpp  BlockFaceMesh.hpp  Blocks.cpp  Blocks.hpp  Chunk.cpp  Chunk.hpp  Config.cpp  Config.hpp  Game.cpp  Game.hpp  GameState.hpp  IngameState.cpp  IngameState.hpp  Item.hpp  Location.hpp  Maths.hpp  MenuState.cpp  MenuState.hpp  Mesh.cpp  Mesh.hpp  PerlinNoise.hpp  Player.hpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Textures.cpp  Textures.hpp  Transform.cpp  Transform.hpp  Util.hpp  VoxGL.vcxproj  VoxGL.vcxproj.filters  World.cpp  World.hpp  main.cpp
VoxGL/shaders/: basicShader.fs  basicShader.vs  shader2D.fs  shader2D.vs  shaderBasic.fs  shaderBasic.vs
